2005-03-31  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in:
  - Perform strerror_r() tests in C++, thanks Christopher Barkley
 include/pqxx/result.hxx:
  - Added warning about thread safety of results
  - Added note about lightweight copying of results
 include/pqxx/tablewriter.hxx, src/dbtransaction.cxx, src/util.cxx:
  - Made it a little easier for Doxygen to resolve certain functions
2005-03-30  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/cursor.cxx:
  - Work around displacement overflow in backend, thanks Christopher Barkley
  - Added stridestring() to generate proper SQL string for given offset
2005-03-22  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in:
  - Fixed Oid type check, thanks Manuel Fernandez Montecelo.
2005-03-19  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx, include/pqxx/transaction_base.hxx,
 src/connection_base.cxx:
  - Moved prepared statements execution from connection to transaction
 include/pqxx/result.hxx:
  - Documented some const_reverse_iterator assignments as tested
  - Full test coverage on result.hxx
 include/pqxx/util.hxx, test/test000.cxx:
  - Test most flexible version of separated_list<>()
  - Full test coverage on util.hxx
 test/test085.cxx:
  - New
  - Tests prepared statements
  - Full test coverage on prepared statements
2005-03-17  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/binarystring.cxx:
  - Fixed wrong bitshift for octal digit: 6, not 9--thanks thomasae@online.no
  - Use octal notation for all chars < 0x20
 test/test062.cxx:
  - Don't just compare unsigned char to char--signedness may differ
 tools/preprelease:
  - Create lib directory if it doesn't exist yet
2005-03-16  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/test062.cxx:
  - Added non-ASCII bytes to test case, thanks thomasae@online.no
2005-03-11  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/libcompiler.h:
  - Moved NOMINMAX even further towards the top
2005-03-10  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configitems: